# freshbot-butler

./: README.md  pyproject.toml
freshbot_butler/: app.py
freshbot_butler/static/: style.css
freshbot_butler/templates/: add_item.html  index.html  langchain.html  pantry.html
